--- a/Views/Shared/EditLayout/_Layout.cshtml
+++ b/Views/Shared/EditLayout/_Layout.cshtml
@@ -47,8 +47,8 @@
   </div>
 </div>
 
-<footer class="container-fluid text-center footer-container">
+<!-- <footer class="container-fluid text-center footer-container">
   <p>Footer Text</p>
-</footer>
+</footer> -->
 </body>
 </html>
