--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -1,18 +1,32 @@
 body, html{ overflow: hidden; height:100%; } 
 /*  navbar */
-.navbar { margin-bottom: 0px; }
+.navbar { margin-bottom: 0px;}
+.sidenav {  margin-top: 10px;}
 
 /*  중앙  scrollable */
 .scrollable-container {overflow: hidden;height:100%;clear:both;}
 .scrollable { position: absolute;padding-top:10px;width:100%;-ms-overflow-style: none; overflow-y: scroll; left:-0px }
-.scrollable::-webkit-scrollbar { display: none;}
+.scrollable::-webkit-scrollbar { display: none; height: 95%;}
 .footer-container { position:absolute; bottom:0; width:100%;height:62px;background:#ccc;}
 
 /* page tab 처리 */
 .tabs {position: relative;clear: both;margin: 35px 0 25px;background: white;}
 .tab {float: left; height:-webkit-fill-available;}
+.tab fieldset {border:1px solid white; padding:20px; margin-bottom:10px; background-color: #eee}
+.tab fieldset.setting {border:1px solid green;}
+.tab fieldset .question { font-size: 1.2em; font-weight: bold; padding-bottom: 5px;}
 .tab .labelfor {background: #eee; padding: 10px; border: 1px solid #ccc; margin-left: -1px; position: relative;left: 1px; top: -40px;-webkit-transition: background-color .17s linear;}
+.tab .labelfor {background: #eee; padding: 10px; border: 1px solid #ccc; margin-left: -1px; position: relative;left: 1px; top: -40px;-webkit-transition: background-color .17s linear;}
+.tab label.setting {border:1px solid green;}
 .tabgroup {display: none;}
 .tab-container {position: absolute;top: -1px;background: white;width: 100%;right: 0;padding: 20px;border: 1px solid #ccc; -webkit-transition: opacity .6s linear;display:none;}
 .tab [type=radio]:checked ~ .labelfor {background: white;border-bottom: 1px solid white;z-index: 2;}
 .tab [type=radio]:checked ~ .labelfor ~ .tab-container {z-index: 1;display:block;} 
+
+.rate [type=radio] { display: none;}
+.rate label { min-width: 6em;}
+.rate [type=radio]:checked ~ label {color: #333;background-color: #e6e6e6;border-color: #adadad; }
+
+
+.rate_min { padding-right: 3px; }
+.rate_max { padding-left: 3px; }
