--- a/Views/Shared/EditLayout/_Layout.cshtml
+++ b/Views/Shared/EditLayout/_Layout.cshtml
@@ -10,10 +10,12 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>        
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/underscore/underscore.js"></script>
     </environment>
     <environment include="Production">
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="~/lib/underscore/underscore.min.js"></script>
     </environment>
     
     @RenderSection("Scripts", required: false)
@@ -22,33 +24,23 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button> -->
       <a class="navbar-brand" href="#">설문</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <!-- <li class="active"><a href="#">Home</a></li> -->
       </ul>
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul> -->
     </div>
   </div>
 </nav>
   
 <div class="container-fluid text-center">    
   <div class="row content">
-    
     @RenderBody()
   </div>
 </div>
 
-<!-- <footer class="container-fluid text-center footer-container">
+<footer class="container-fluid text-center footer-container">
   <p>Footer Text</p>
-</footer> -->
+</footer>
 </body>
 </html>
