--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -1,25 +1,27 @@
-body, html{ overflow: hidden; height:100%; } 
+body, html{ height:102%; }
 /*  navbar */
 .navbar { margin-bottom: 0px;}
-.sidenav {  margin-top: 10px;}
+.sidenav { margin-top: 10px;}
 
-/*  중앙  scrollable */
-.scrollable-container {overflow: hidden;height:100%;clear:both;}
-.scrollable { position: absolute;padding-top:10px;width:100%;-ms-overflow-style: none; overflow-y: scroll; left:-0px }
-.scrollable::-webkit-scrollbar { display: none; height: 95%;}
-.footer-container { position:absolute; bottom:0; width:100%;height:62px;background:#ccc;}
+#container { display: none; }
 
+.survey {background:white !important; top:-3px}
+.leftnav {color:#87B2F1; padding: 10px 0;}
+.leftnav p { border-bottom: 1px solid #eee; }
 /* page tab 처리 */
-.tabs {position: relative;clear: both;margin: 35px 0 25px;background: white;}
-.tab {float: left; height:-webkit-fill-available;}
-.tab fieldset {border:1px solid white; padding:20px; margin-bottom:10px; background-color: #eee}
-.tab fieldset.setting {border:1px solid green;}
+.tabs {position: relative;clear: both;margin: 52px 0 25px;background: white;}
+.tab {float: left; }
+.tab fieldset {border:1px solid white; padding:20px; margin-bottom:10px; background-color: #eee; height: 100%}
+.tab fieldset.setting {border:1px solid #87B2F1;}
 .tab fieldset .question { font-size: 1.2em; font-weight: bold; padding-bottom: 5px;}
-.tab .labelfor {background: #eee; padding: 10px; border: 1px solid #ccc; margin-left: -1px; position: relative;left: 1px; top: -40px;-webkit-transition: background-color .17s linear;}
-.tab .labelfor {background: #eee; padding: 10px; border: 1px solid #ccc; margin-left: -1px; position: relative;left: 1px; top: -40px;-webkit-transition: background-color .17s linear;}
-.tab label.setting {border:1px solid green;}
+.tab .labelfor {background: #eee; padding: 9px; border: 1px solid #ccc; margin-left: 0; position: relative;left: 1px; top: -40px;-webkit-transition: background-color .17s linear;}
+.tab .labelfor span.sel { color:#87B2F1 }
+.tab .labelfor span {color: #C1C1C1}
+.tab .plus {padding: 8px; border: 1px solid #eee; margin-left: -1px; position: relative;left: -2px; top: -39px;color:#87B2F1; }
+.tab label.setting {border:1px solid #87B2F1; background: white;color:#87B2F1;}
 .tabgroup {display: none;}
-.tab-container {position: absolute;top: -1px;background: white;width: 100%;right: 0;padding: 20px;border: 1px solid #ccc; -webkit-transition: opacity .6s linear;display:none;}
+
+.tab-container {height:92vh;position: absolute;top:-1px;width:100%;right:0;padding:20px;border: 1px solid #ccc; overflow-y:scroll;display:none;} 
 .tab [type=radio]:checked ~ .labelfor {background: white;border-bottom: 1px solid white;z-index: 2;}
 .tab [type=radio]:checked ~ .labelfor ~ .tab-container {z-index: 1;display:block;} 
 
