--- a/Views/Edit/Index.cshtml
+++ b/Views/Edit/Index.cshtml
@@ -9,7 +9,7 @@
 <environment include="Production">    
     <script src="~/js/vue.min.js"></script>
 </environment>
-<script src="~/js/vue-component.js"></script>
+<script src="~/js/vue-component-control.js"></script>
 }
 
 
