edit 폴더 생성 및 컴포넌트 이동

--- a/Views/Edit/Index.cshtml
+++ b/Views/Edit/Index.cshtml
@@ -10,6 +10,7 @@
     <script src="~/js/vue.min.js"></script>
 </environment>
 <script src="~/js/vue-component-control.js"></script>
+<script src="~/js/vue-component-settinglayer.js"></script>
 }
 
 
@@ -36,6 +37,9 @@
         </div>
     </div>
     <div class="col-sm-3 sidenav">
+        <div>
+            
+        </div>?
         <pre>
              {{ settings | pretty }}
         </pre>
