--- a/wwwroot/css/Example/main.css
+++ b/wwwroot/css/Example/main.css
@@ -9,3 +9,39 @@
 /* textarea {
     resize: none;
 } */
+
+
+/* Rate */
+.rate [type=radio] { display: none;}
+.rate label { min-width: 5em; background-color: #FFFFFF; cursor: pointer;}
+.rate [type=radio]:checked + label {color: #333;background-color: #e6e6e6;border-color: #adadad; }
+.rate_min { padding-right: 3px; }
+.rate_max { padding-left: 3px; }
+
+/* fieldset */
+/* 우선 fildset에 강제로... */
+fieldset {border:1px solid white; padding:15px; margin-bottom:10px; background-color: #eee}
+fieldset .setting {border:1px solid green;}
+fieldset .question {font-weight: bold; padding-bottom: 5px;}
+fieldset .question .title { font-size: 1.2em; font-weight: bold; margin-bottom:0px;}
+fieldset .question .description { font-size: 0.9em;}
+
+
+/* 
+
+input[type="radio"] + label {
+    border: 1px solid lightblue;
+    background-color: lightblue;
+    cursor: pointer;
+    display: block;
+    height: 20px;
+    width: 50px; 
+    text-align: center;
+    line-height: 20px;
+  }
+  input[type="radio"]:checked + label {
+    border: 1px solid blue;
+    background-color: dodgerblue;
+  }
+
+*/
