--- a/Views/Shared/ExampleLayout/_Layout.cshtml
+++ b/Views/Shared/ExampleLayout/_Layout.cshtml
@@ -40,7 +40,7 @@
   </div>
 </nav>
   
-<div class="container-fluid text-center">    
+<div class="container-fluid">    
   <div class="row content">
     
     @RenderBody()
